syntax = "proto3";

package com.ayy.grpc;

option java_package = "com.ayy.grpc";
option java_outer_classname = "StudentInfo";
option java_multiple_files = true;

service StudentService {
  rpc GetRealNameByStudentname (MyRequest) returns (MyResponse) {}
  rpc GetStudentsByAge (StudentRequest) returns (stream StudentResponse) {}
  rpc GetStudentsWrapperByAges (stream StudentRequest) returns (StudentResponseList) {}
}


message MyRequest {
  string studentname = 1;
}

message  MyResponse {
  string realname = 2;
}

message StudentRequest {
  int32 age = 1;
}

message StudentResponse {
  string name = 1;
  int32 age = 2;
  string city = 3;
}

message StudentResponseList {
  repeated StudentResponse studentResponse = 1;
}
